syntax = "proto3";

package protobuf;

option go_package = "/pb";
import "google/api/annotations.proto";

service AstrologyService{
  rpc GetPrediction(PredictionRequest) returns (PredictionResponse){
    option (google.api.http).get = "/api/v1/getPrediction";
  }
  rpc SendPredictions(SendPredictionsRequest)returns (SendPredictionsResponse){
    option (google.api.http).post = "/api/v1/sendPredictions";
  }
}
message SendPredictionsRequest{
}
message SendPredictionsResponse{
}
message PredictionRequest{
  string Sign = 1;
  string Day  = 2;
}
message PredictionResponse{
  string DateRange     = 1;
  string CurrentDate   = 2;
  string Description   = 3;
  string Compatibility = 4;
  string Mood          = 5;
  string Color         = 6;
  string LuckyNumber   = 7;
  string LuckyTime     = 8;
}



